# kslurm

./: .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yml  LICENSE  README.md  install_cluster_utils.py  install_kslurm.py  mkdocs.yml  pyproject.toml  setup.cfg  setup.py
.github/workflows/: bump_version.yml  ci.yml  deploy.yml  release_drafter.yml
app/utils/: colors.py  slurm_args.py  toolz_stub.py
cluster_utils/: __init__.py  batch.py  colors.py  exceptions.py  interactive.py  ssnake.py  submission.py  text.py
cluster_utils/args/: __init__.py  arg_constructors.py  arg_types.py  args.py  formatters.py  help.py  parser.py
cluster_utils/slurm/: __init__.py  helpers.py  job_templates.py  slurm_command.py
cluster_utils/slurm/slurm_args/: args.py  formatters.py  validators.py
cluster_utils/utils/: arg_types.py  slurm_args.py  slurm_command.py
docs/: configuration.md  index.md  install.md  jobs.md  kapp.md  neuroglia-helpers.md  python.md
docs/stylesheets/: colors.css
kslurm/: __init__.py  appcache.py  appconfig.py  container.py  exceptions.py  kpyindex.py  kslurm.py  shell.py  ssnake.py  submission.py  text.py  utils.py  venv.py
kslurm/args/: __init__.py  actions.py  arg.py  arg_sorter.py  arg_types.py  arg_types.pyi  arg_types_cast.py  command.py  help.py  help_templates.py  helpers.py  matchers.py  parser.py  protocols.py  types.py
kslurm/cli/: __init__.py  config.py  kapp.py  kbatch.py  kjupyter.py  kpy.py  krun.py  main.py  ssnake.py
kslurm/cli/kapp/: alias.py  image.py  main.py
kslurm/data/: download_frozen_container.hash  slurm_job_templates.json
kslurm/installer/: __init__.py  install.py  installer.py  update.py  utils.py  version.py
kslurm/models/: __init__.py  config.py  formatters.py  job_templates.py  kslurm.py  slurm.py  update.py  validators.py
kslurm/slurm/: __init__.py  helpers.py  job_templates.py  slurm_command.py
kslurm/slurm/slurm_args/: args.py  validators.py
kslurm/style/: __init__.py  console.py  themes.py
kslurm/submission/: __init__.py  common.py  kbatch.py  kjupyter.py  krun.py  ssnake.py
kslurm/test/: test_batch.py  test_help.py  test_slurm_helpers.py  test_validators.py
kslurm/test/args/: arg_lists.py  arg_templates.py  model_lists.py  test_argument_assignment.py  test_model_parsing.py  test_parser.py
kslurm/test/args/models/: basic.py  common.py  no_defaults.py  positional_and_shape.py
kslurm/test/installer/: fake_releases.json  test_install.py  test_utils.py
test/: test_batch.py  test_help.py  test_slurm_command.py  test_slurm_helpers.py  test_validators.py
test/args/: arg_lists.py  arg_templates.py  dummy_models.py  model_lists.py  parser_dummy_args.py  test_arg_parsing.py  test_argument_assignment.py  test_model_parsing.py
test/args/models/: __init__.py  basic.py  common.py  formatters.py  no_defaults.py  positional_and_shape.py
test/installer/: test_utils.py
typings/: semver.pyi  shellingham.pyi  toolz.pyi
typings/yaspin/: __init__.pyi  api.pyi  base_spinner.pyi  constants.pyi  core.pyi  helpers.pyi  signal_handlers.pyi  spinners.pyi
