[metadata]
name = kslurm
version = 0.2.5-a1
description = Helper scripts and wrappers for running commands on SLURM compute clusters.
license = MIT
readme = README.md
author = Peter Van Dyken
author_email = pvandyk2@uwo.ca
url = https://github.com/pvandyken/kslurm
keywords = slurm, compute cluster
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Utilities
    Typing :: Typed

[options]
packages = find:

python_requires = >=3.9, <3.11
install_requires =
    attrs ~=21.2
    colorama ~=0.4
    typing-extensions >=3.10
    rich ~=12.0
    tabulate ~=0.8
    semver ~=2.13.0
    appdirs ~=1.4.4
    shellingham ~=1.0
    virtualenv >=20.0.24,<21

[options.package_data]
* = *.sh

[options.extras_require]
dev =
    black ~=22.1
    tox ~=3.24
    isort ~= 5.7
    flake8 ~=4.0
    mkinit ~=0.3
    poethepoet ~=0.13
    pre-commit ~=2.10
test =
    pytest ~=7.1
    pytest-mock ~=3.6
    coverage ~=6.3
    hypothesis ~=6.20
    pyfakefs ~=4.5


[options.entry_points]
console_scripts =
    kbatch = kslurm.submission.kbatch:kbatch
    krun = kslurm.submission.krun:krun
    kjupyter = kslurm.submission.kjupyter:kjuptyer
    kslurm = kslurm.cli.main:kslurm
    kpy = kslurm.cli.kpy:kpy
